tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__if__class_in_then.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/if/class_in_then.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
[line 2] Error at 'class': Expect expression.
