tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__if__fun_in_else.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/if/fun_in_else.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
[line 2] Error at 'fun': Expect expression.
