tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__if__var_in_else.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/if/var_in_else.lox
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
UnexpectedToken { expected: [LParen, String, Number, True, False, Nil, Minus, Bang], actual: Token { kind: Var, loc: craftinginterpreters/test/if/var_in_else.lox:68..71 } }
